--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/default.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/default.css">
     <title>THE | PAIN</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
-    <script src="./js/yaml.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./src/js/yaml.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 </html>
